[package]
name = "landsat_stack"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "landsat_stack"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.10"
glob = "0.3"
indicatif = "0.17"
log = "0.4"
memmap2 = "0.9"
ndarray = "0.15"
rayon = "1.8"
regex = "1.10"
structopt = "0.3"
tiff = "0.9"