[package]
name = "process_tile_downstream_wo_json"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
env_logger = "0.10"
glob = "0.3"
indicatif = "0.17"
log = "0.4"
memmap2 = "0.5"
ndarray = { version = "0.15", features = ["rayon"] }
ndarray-npy = "0.7"
parking_lot = "0.12"
rayon = "1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
tiff = "0.9"

[profile.release]
# Optimization options
opt-level = 3
lto = true
codegen-units = 1
debug = false 
panic = "abort"